# payment_service

./: .gitignore  Makefile  README.md  docker-compose.yml
app/: Dockerfile  alembic.ini  pyproject.toml
app/alembic/: env.py
app/alembic/versions/: 2026_05_29_2044-326ee6a3ae40_initial.py  2026_05_30_1200-a1b2c3d4e5f6_unique_idempotency_key.py  2026_05_31_0942-c9194d52423a_payment_status_enum.py
app/entrypoints/: consumer.sh  relay.sh
app/src/: consumer_main.py  lifespan.py  main.py  relay_main.py  routers.py
app/src/application/dto/: payment.py
app/src/application/interactors/: payment.py
app/src/application/interfaces/: repos.py
app/src/domain/: enums.py  exceptions.py
app/src/domain/entities/: payment.py
app/src/infra/core/: config.py  logger.py
app/src/infra/di/: ioc.py
app/src/infra/outbox/: relay.py
app/src/infra/resources/broker/: broker.py
app/src/infra/resources/database/: manager.py  utils.py
app/src/infra/resources/database/mappers/: payment.py
app/src/infra/resources/database/models/: base.py  outbox.py  payment.py
app/src/infra/resources/database/models/mixins/: __init__.py  data.py  pk.py
app/src/infra/resources/database/repos/: outbox.py  payment.py  uow.py
app/src/presentation/amqp/: retry.py
app/src/presentation/amqp/handlers/: payment.py  webhook.py
app/src/presentation/amqp/services/: gateway.py  webhook.py
app/src/presentation/http/: authentication.py  error_handlers.py
app/src/presentation/http/v1/handlers/: payments.py
app/src/presentation/http/v1/mappers/: payments.py
app/src/presentation/http/v1/schemas/: payments.py
envs/: app.env.template  postgres.env.template
